SERVER-1932 Don't check invalid field range with table scan